# fpga-demo

./: CMakeLists.txt  Makefile  README.md  compile_kernel.sh  env_host.sh  run.sh
cmake/: FindAlteraCL.cmake  FindOpenCL.cmake
src/: CMakeLists.txt  saxpy.c  saxpy.cl  utils.c  utils.h
